--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.1.1",
     "@radix-ui/react-select": "^1.2.2",
     "classcat": "^5.0.4",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.44.3"
   },
   "devDependencies": {
     "@csstools/postcss-oklab-function": "^2.2.3",
