--- a/package.json
+++ b/package.json
@@ -15,18 +15,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/error-message": "^2.0.1",
     "@hookform/resolvers": "^3.1.1",
     "@radix-ui/react-select": "^1.2.2",
     "classcat": "^5.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.44.3"
+    "react-hook-form": "^7.44.3",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@csstools/postcss-oklab-function": "^2.2.3",
     "@logux/stylelint-config": "^0.15.1",
     "@neodx/svg": "^0.2.0",
-    "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@types/react": "^18.0.37",
@@ -47,12 +48,10 @@
     "postcss-opacity-percentage": "^2.0.0",
     "prettier": "^2.8.8",
     "prettier-config-standard": "^5.0.0",
-    "react-redux": "^8.0.7",
     "stylelint": "^15.7.0",
     "typescript": "^5.0.2",
     "vite": "^4.3.9",
     "vite-tsconfig-paths": "^4.2.0",
-    "vitest": "^0.32.0",
-    "yup": "^1.2.0"
+    "vitest": "^0.32.0"
   }
 }
