--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "eslint-plugin-perfectionist": "^1.2.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
+    "happy-dom": "^9.20.3",
     "lefthook": "^1.4.1",
     "postcss": "^8.4.24",
     "postcss-media-minmax": "^5.0.0",
@@ -52,6 +53,6 @@
     "typescript": "^5.0.2",
     "vite": "^4.3.9",
     "vite-tsconfig-paths": "^4.2.0",
-    "vitest": "^0.32.0"
+    "vitest": "^0.32.2"
   }
 }
