--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@hookform/error-message": "^2.0.1",
     "@hookform/resolvers": "^3.1.1",
     "@radix-ui/react-select": "^1.2.2",
+    "body-scroll-lock": "4.0.0-beta.0",
     "classcat": "^5.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -30,6 +31,7 @@
     "@neodx/svg": "^0.2.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
+    "@types/body-scroll-lock": "^3.1.0",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
