chore: add test script

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
+    "test": "vitest",
     "sprite": "sprite --root assets -o public/sprite -d src/shared/view/icon/sprite.h.ts",
     "lint": "tsc --noEmit && eslint ./src && stylelint ./src/**/*.css",
     "preview": "vite preview"
