--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,7 +36,7 @@ jobs:
   deploy:
     name: Deploy 🚀
     runs-on: ubuntu-latest
-    if: '${{ github.event.pull_request.head.repo.full_name == github.repository }}'
+    if: github.ref == 'refs/heads/main'
     needs:
       - checks
     steps:
